package backEnd;

public enum GameState {
    GAMEPLAY,
    GAMEOVER,
    TIE
}
